# aoc-2021

./: Cargo.toml  fmt-all.sh  run-all.sh  run-local.sh  run.sh
.docker/: Dockerfile  entrypoint.sh
answers/: 04  05  07  09  11  12  13  14  16  18  21  22  24
commons/: Cargo.toml
commons/src/: geom.rs  grid.rs  io.rs  lib.rs
day-01/: Cargo.toml
day-01/src/: main.rs
day-02/: Cargo.toml
day-02/src/: main.rs
day-03/: Cargo.toml
day-03/src/: main.rs
day-04/: Cargo.toml
day-04/src/: main.rs
day-05/: Cargo.toml
day-05/src/: main.rs
day-06/: Cargo.toml
day-06/src/: main.rs
day-07/: Cargo.toml
day-07/src/: main.rs
day-08/: Cargo.toml
day-08/src/: main.rs
day-09/: Cargo.toml
day-09/src/: main.rs
day-10/: Cargo.toml
day-10/src/: main.rs
src/commons/: counter.rs  geom.rs  grid.rs  io.rs  mod.rs
