[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Nicholas Hollett <niax@niax.co.uk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
itertools = "0.10.3"
lazy_static = "1.4.0"
petgraph = "0.6.0"
bitvec = "0.22.3"
cached = "0.26.2"
regex = "1"
fasthash = "0.4.0"
